--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -1,7 +1,3 @@
-.ct {
-   margin-top: 6rem;
-}
-
 .ct,
 .inputField {
    display: flex;
@@ -44,7 +40,7 @@
    outline: none;
    font-size: 1.1875rem;
    transition: background 0.3s ease;
-   padding-left: .65rem;
+   padding-left: 0.65rem;
 }
 
 .inputField input:focus {
@@ -79,20 +75,12 @@
    .inputField form {
       width: 100%;
    }
-
-   .ct {
-      margin-top: 8rem;
-   }
 }
 
 @media screen and (max-width: 550px) {
    .inputField h2 {
       font-size: 1.5rem;
       margin-bottom: 2.5rem;
-   }
-
-   .ct {
-      margin-top: 0rem;
    }
 }
 
